# tmc-oai

./: .gitignore  MODULE.md  README.md  pyproject.toml
notebooks/: oai_package_downloader.ipynb  oai_package_inventory.ipynb  oai_xray_txt_schema_explorer.ipynb
reference/: oai_package_timepoint_map.csv
src/tmc-oai/: file_counter.py  manifest_analyzer.py  metadata_analyzer.py  oai_config.py  oai_summary.py
src/tmc_oai/: __init__.py  env.py  inventory.py  io.py  oai_download_tqdm_runner.py  schema_explorer.py  semiquant.py  venn.py
tests/: test_modules.py  test_oai_pipeline.py
